fixed the spacing on subclass tab
added a 1px wide image to fix "other subclasses" being higher positioned differently from fighter and phantom (which had class icons while this didn't)

this fix is stupid but whatever

--- a/css/style.css
+++ b/css/style.css
@@ -97,4 +97,9 @@ html {
 	width: 22px;
 }
 
+.wfuck {
+	width: 1px;
+	height: 22px;
+}
+
 
